--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -4,3 +4,14 @@ $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
 $desktop-breakpoint: 45rem;
+
+// Colors
+$dark-grey: #333333;
+$dark-purple: #342C53;
+$turquoise: #00A2B9;
+$google-red: #DD4B39;
+$color1: rgba(17, 75, 95, 1);
+$color2: #F3EFE7;
+$color3: rgba(66, 107, 105, 1);
+$color4: rgba(34, 46, 80, 1);
+$color5: rgba(201, 100, 60, 1);
