--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,11 @@
-@import "./base/settings";
-@import "./base/base";
+@import "./base//settings";
+@import "./base//base";
+@import "./components//box-layout";
+@import "./components//buttons";
+@import "./components//content-box";
+@import "./components/header";
+@import "./components//content-container";
+@import "./components/balance";
+@import "./components/login-page";
+
 
