--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -18,9 +18,7 @@
         text-decoration: none;
         color: white;
         text-decoration-line: none;
-        
         font-weight: 300;
-        
         text-align: center;
         margin: 0;
         padding: 10px;
@@ -53,6 +51,10 @@
     }
 
     
+}
+
+.is-active {
+    background-color: #11b8cf;
 }
 
 
