--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -6,12 +6,9 @@ $xl-size: 4.8rem;
 $desktop-breakpoint: 45rem;
 
 // Colors
-$dark-grey: #333333;
-$dark-purple: #342C53;
-$turquoise: #00A2B9;
+$bright-blue: #4962f6;
+$light-blue: #c8dbffbd;
+$light-grey: #e3e3e3;
 $google-red: #DD4B39;
-$color1: rgba(17, 75, 95, 1);
-$color2: #F3EFE7;
-$color3: rgba(66, 107, 105, 1);
-$color4: rgba(34, 46, 80, 1);
-$color5: rgba(201, 100, 60, 1);
+$white: #f7f7f7;
+$black: #464452;
