--- a/src/styles/components/_balance.scss
+++ b/src/styles/components/_balance.scss
@@ -1,6 +1,7 @@
 .balance {
     font-family: 'Lato', sans-serif;
-    font-weight: 300;   
+    font-weight: 300;
+    border-radius:  0 0 7px 7px;
 }
 
 .balance-numeral {
