--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,5 +7,10 @@
 @import "./components//content-container";
 @import "./components/balance";
 @import "./components/login-page";
+@import "./components/toggle-collapse-bar";
+@import "./components/list-item";
+@import "./components/filters";
+@import "./components/forms";
+@import "./components/inputs";
 
 
