--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,14 +3,14 @@ html {
 }
 
 body {
-    color: white;
+    color: $black;
     font-family: 'Noto Sans TC', sans-serif;
     font-weight: 100;
     font-style: normal;
     font-size: $m-size;
     width: 100vw;
     height: 100vh;
-    background: $dark-purple;
+    background: $light-blue;
     background-size: cover;
     margin: 0;
     padding: 0;
