--- a/src/styles/components/_content-box.scss
+++ b/src/styles/components/_content-box.scss
@@ -2,10 +2,10 @@
     margin-bottom: $l-size;
     padding: $s-size 0;
     background: white;
-    border-radius: 7px;
     color: black;
     display: flex;
     justify-content: center;
+    border-radius: 0 0 7px 7px;
 }
      
 
