--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,6 @@
+
 .header {
-    background: $turquoise;
+    background: $white;
     margin: 0 0 0 0;
     width: 100vw;
     height: 40px;
@@ -16,7 +17,7 @@
 
     p {
         text-decoration: none;
-        color: white;
+        color: $black;
         text-decoration-line: none;
         font-weight: 300;
         text-align: center;
@@ -33,8 +34,8 @@
     .logout-button {
         border: none;
         outline: none;
-        background: $turquoise;
-        color: white;
+        background: $white;
+        color: $black;
         font-family: 'Lato', sans-serif;
         font-weight: 300;
         font-size: $m-size;
@@ -43,20 +44,24 @@
     }
 
     p:hover{
-        background-color: #11b8cf;
+        background-color: $bright-blue;
+        color: $white;
     }
 
     button:hover {
         background-color: $google-red;
+        color: $white;
     }
 
     
 }
 
 .is-active {
-    background-color: #11b8cf;
+    background-color: $bright-blue;
+    p {
+        color: $white;
+    }
 }
-
 
 
 
