--- a/src/styles/components/_login-page.scss
+++ b/src/styles/components/_login-page.scss
@@ -1,3 +1,10 @@
+.login-page {
+    background: $light-blue;
+    background-size: cover;
+    width: 100vw;
+    height: 100vh;
+}
+
 hr {
     border: none;
     border-top: 1px dotted grey;
@@ -11,7 +18,7 @@ hr {
     display: flex;
     width: 100%;
     margin-top: 5px;
-    color: white;
+    color: $white;
     text-align: center;
 
     button {
@@ -50,14 +57,14 @@ hr {
         background: darken($color: $google-red, $amount: 10%);
     }
     
-    .login-button__email {
-        background: $turquoise;
+    .btn-big {
+        background: $bright-blue;
         font-weight: bold;
         margin-bottom: 35px;
     }
 
-    .login-button__email:hover {
-        background: darken($color: $turquoise, $amount: 10%);
+    .btn-big:hover {
+        background: darken($color: $bright-blue, $amount: 10%);
     }
 }
 
@@ -93,26 +100,8 @@ hr {
         border-radius: 7px 0 0 0;
     }
 
-    #login {
+    #sign-in {
         border-radius: 0 7px 0 0;
-    }
-}
-
-.login-inputs {
-    display: flex;
-    flex-direction: column;
-    padding-top: 5px;
-    input {
-        height: 40px;
-        border-radius: 50px;
-        border: none;
-        background-color: rgb(203, 215, 222);
-        margin-bottom: 2%;
-        text-indent: 15px;
-    }
-
-    input:focus {
-        outline: 0;
     }
 }
 
