--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -10,14 +10,18 @@
             flex-direction: column;
         }
 
-        input, button {
+        input {
             width: 300px;;
-            height: 25px;
+            height: 40px;
             margin-bottom: 15px;
+            border: none;
+            background: $light-grey;
+            
         }
 
         button {
             min-height: 40px;
+            width: 300px;
         }
     }
 }
