fixed toggle bar dynamic components

--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -19,6 +19,10 @@
             
         }
 
+        input:focus {
+            border: none;
+        }
+
         button {
             min-height: 40px;
             width: 300px;
