--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -1,18 +1,56 @@
 .input-bar {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding-top: 5px;
+    width: 100%;
     input {
         height: 40px;
-        border-radius: 50px;
         border: none;
         background-color: $light-grey;
         margin-bottom: 2%;
         text-indent: 15px;
+        width: 100%;
     }
 
     input:focus {
-        outline: 0;
+        outline-color: $white;
+        outline-style: none;
+        outline-width: 0px;
     }
 }
 
+.rounded-corners {
+    input {
+        border-radius: 50px;
+    }
+}
+
+.search-bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background: $light-grey;
+    width: 50%;
+    height: 40px;
+    border-radius: 50px;
+    padding: 0px 25px 0px 15px;
+    input {
+        border: none;
+        background-color: $light-grey;
+        margin-bottom: 2%;
+        text-indent: 15px;
+        margin-top: 9px;
+    }
+
+    input:focus {
+        outline-color: $light-grey;
+        outline-style: none;
+        outline-width: 0px;
+    }
+
+    i {
+        color: lighten($color: $black, $amount: 10%)
+    }
+}
